infrastructure/kubernetes/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: healthcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: medicareacr.azurecr.io/healthcare/notification-service:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 384Mi
          livenessProbe:
            exec:
              command: ['pgrep', '-f', 'node']
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            exec:
              command: ['pgrep', '-f', 'node']
            initialDelaySeconds: 10
            periodSeconds: 15
